fix table height to remove truncation

--- a/src/app/components/cases-country/cases-country.component.css
+++ b/src/app/components/cases-country/cases-country.component.css
@@ -63,7 +63,7 @@ table.mat-table {
 }
 
 .data-table {
-  max-height: 100vh;
+  max-height: 80vh;
   flex-direction: column;
   max-width: 100%;
   width: 100%;
